overlays/sandbox/membership-hub-gke-autopilot2/compiled/newapp-2/networkpolicy_default-deny-all-traffic.yaml
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: default-deny-all-traffic
  namespace: newapp-2
spec:
  ingress: []
  podSelector: {}
